--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "react": "^18.2.0",
